[package]
name = "rabin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]  
name = "cli"  
path = "src/bin/cli.rs"  

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
lazy_static = "1.4"
num-integer = "0.1.46"
